<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    tools:context=".registerActivity">

    <ProgressBar
        android:id="@+id/progressBarreg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/regButton"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">

        <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regname"
            android:importantForAutofill="yes"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regemail"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regpassword"
            android:importantForAutofill="yes"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/regPasswordC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regconfirm_password"
            android:importantForAutofill="yes"
            android:inputType="textPassword"

            />


        <EditText
            android:id="@+id/regPhn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regphone"
            android:importantForAutofill="yes"
            android:inputType="phone" />

        <EditText
            android:id="@+id/regAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/regaddress"
            android:importantForAutofill="yes"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Step 1 of 1"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regregister"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <TextView
        android:id="@+id/nLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regalready_registered_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton"
        app:layout_constraintVertical_bias="0.120000005" />


</androidx.constraintlayout.widget.ConstraintLayout>
